--- a/package.json
+++ b/package.json
@@ -11,15 +11,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@progress/kendo-angular-buttons": "12.0.1",
+    "@progress/kendo-angular-common": "12.0.1",
+    "@progress/kendo-angular-dateinputs": "^12.0.1",
+    "@progress/kendo-angular-icons": "12.0.1",
+    "@progress/kendo-angular-inputs": "12.0.1",
+    "@progress/kendo-angular-intl": "12.0.1",
+    "@progress/kendo-angular-l10n": "12.0.1",
+    "@progress/kendo-angular-label": "12.0.1",
+    "@progress/kendo-angular-navigation": "12.0.1",
+    "@progress/kendo-angular-popup": "12.0.1",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-default": "^6.3.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^3.1.1",
+    "mdb-angular-ui-kit": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
