--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^3.1.1",
+    "keycloak-angular": "^14.0.0",
+    "keycloak-js": "^21.1.1",
     "mdb-angular-ui-kit": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
