--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^3.1.1",
+    "font-awesome": "^4.7.0",
     "keycloak-angular": "^14.0.0",
     "keycloak-js": "^21.1.1",
     "mdb-angular-ui-kit": "^4.1.0",
