--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "src/app/scss/styles.scss"
+
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
